# crisp

./: .gitignore  README.md  pixi.toml
config/: controllers.yaml
scripts/: set_ros_env.sh
scripts/launch/: franka.launch.py
src/my_controller/: CMakeLists.txt  my_controller.xml  package.xml
src/my_controller/admittance_fitting/: plot_ft_and_pose_error.py  pose_error_20260708_171428.csv  pose_error_20260708_172556.csv  pose_error_20260708_173530.csv  pose_error_20260708_174854.csv  pose_error_20260709_111901.csv  pose_error_20260709_112138.csv  pose_error_20260709_112403.csv  pose_error_20260709_112534.csv  pose_error_20260709_112559.csv  pose_error_20260709_112703.csv
src/my_controller/include/my_controller/: cartesian_admittance.hpp  home_position.hpp  impedance_controller.hpp  my_controller.hpp
src/my_controller/launch/: tcp_admittance_visualization.launch.py
src/my_controller/scripts/: cartesian_admittance.cpp  cartesian_admittance.yaml  cartesian_admittance_controller.cpp  cartesian_admittance_flowchart.md  cartesian_admittance_trajectory.cpp  command.txt  my_admittance_controller.py  plot_wrench_filter_comparison.py  read_hex21.cpp  run_pickled_admittance_trajectories.py  tune_joint_pd.py
src/my_controller/scripts/TCP_admittance/: cartesian_admittance_controller_tcp.cpp  cartesian_admittance_tcp.yaml  quintic_tcp_trajectory.cpp  tcp_admittance_frames.rviz  verify_tcp_admittance.cpp
src/my_controller/src/: home_position.cpp  home_position_client.cpp  impedance_controller.cpp  my_controller.cpp  my_controller.yaml  read_pose.py  run_workflow.txt  test.cpp
src/resense_hex21/: setup.py
src/resense_hex21/resense_hex21/: resense_hex21_node.py
trajs/: trajectory1.pkl  trajectory2.pkl
