<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_controller</name>
  <version>0.0.1</version>
  <description>Custom ros2_control controller for the Franka FR3.</description>
  <maintainer email="sunwenbincn@gmail.com">Wenbin Sun</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>generate_parameter_library</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>crisp_controllers</depend>
  <depend>geometry_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>controller_manager_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>parameter_traits</depend>
  <depend>rclcpp_action</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>libfranka</depend>
  <depend>yaml-cpp</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
